<resources>
    <string name="app_name">TodoTask</string>
    <string name="todo_task">Todo Task</string>
    <string name="add">Add</string>
    <string name="delete">delete button\n</string>
    <string name="todo_task_name">Todo task name</string>
    <string name="update">Update..</string>
    <string name="update_task">Update Task</string>
    <string name="add_task">Add Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adds">add</string>
    <string name="todo_task_details">Todo task details</string>
    <string name="todo_task_detailsa">Todo task details...</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="back_button">back button</string>
    <string name="todotask">TodoTask</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="app_icon">app icon</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="_01800000000">01800000000</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="_000000">000000</string>
    <string name="don_t_have_an_acount_sing_in">Don\'t have an acount? Sing in</string>
    <string name="_000000iii">000000</string>
    <string name="pass_show">pass_show</string>
</resources>