<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_employee_img_id"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_include">

        <ImageView
            android:id="@+id/employee_profile_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_employee_img_id" />

    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:text="@string/phone_number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt" />

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:background="@drawable/login_et_border"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:hint="@string/_01800000000"
        android:maxLength="11"
        android:inputType="phone"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_tv" />

    <TextView
        android:id="@+id/number_error_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:text="@string/invalid_phone_number"
        android:textColor="@color/red"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_et" />


    <TextView
        android:id="@+id/phone_pass_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_error_tv" />


<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:id="@+id/pass_et"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Enter your password..."-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/phone_pass_tv">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="textPassword"-->
<!--            android:fontFamily="@font/bubble_gumsans_regular"-->
<!--            android:hint="@string/_000000iii"-->
<!--            android:textSize="18sp"-->
<!--            android:padding="8dp"-->
<!--            android:ems="15"/>-->

<!--    </com.google.android.material.textfield.TextInputEditText>-->


    <RelativeLayout
        android:id="@+id/pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/login_et_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_pass_tv">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/border_trasparent"
            android:fontFamily="@font/bubble_gumsans_regular"
            android:hint="@string/_000000iii"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/visibility_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/pass_show"
            android:src="@drawable/baseline_remove_red_eye_24"
            />
        <ImageView
            android:id="@+id/visibility_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/pass_show"
            android:src="@drawable/baseline_visibility_off_24"
            />
    </RelativeLayout>


    <TextView
        android:id="@+id/pass_error_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:text="@string/invalid_password"
        android:textColor="@color/red"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_et" />


    <Button
        android:id="@+id/forget_pass_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/border_trasparent"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="#6750A4"
        android:textSize="14sp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_error_tv" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#6750A4"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_pass_btn" />


    <TextView
        android:id="@+id/sing_in_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bubble_gumsans_regular"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/don_t_have_an_acount_sing_in"
        android:textAlignment="center"
        android:textColor="#6750A4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>